# cpp_skeleton

./: .clang-format  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
cmake/: CodeCoverage.cmake
include/cpp_skeleton/: dummy.hpp
src/: CMakeLists.txt  dummy.cpp
test/: CMakeLists.txt  dummy.cpp
